--- a/docs/.vuepress/styles/palette.scss
+++ b/docs/.vuepress/styles/palette.scss
@@ -2,4 +2,4 @@ $MQNarrow: 1080px !default;
 // code languages
 $codeLang: 'c' 'cpp' 'cs' 'css' 'dart' 'docker' 'fs' 'go' 'html' 'java' 'js'
 'json' 'kt' 'less' 'makefile' 'md' 'php' 'py' 'rb' 'rs' 'sass' 'scss' 'sh' 'autohotkey' 'text'
-'styl' 'ts' 'toml' 'vue' 'yml' !default;
+'styl' 'ts' 'toml' 'vue' 'xml' 'yml' !default;
